--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<tr>
 			<td><table>
 				<tr>
-					<td>Nested Table 2</td>
+					<th>Nested Table 2</th>
 				</tr>
 				<tr>
 					<td>Column 1</td>
@@ -24,7 +24,7 @@
 				</tr>
 			</table></td>
 			<td><table>
-				<tr><td>Nested Table 1</td></tr>
+				<tr><th>Nested Table 1</th></tr>
 				<tr><td><ul>
 						<li>List item</li>
 						<li>List item</li>
@@ -35,14 +35,14 @@
 		</tr>
 		<tr>
 			<td><table>
-				<tr><td>Nested Table 3</td></tr>
+				<tr><th>Nested Table 3</th></tr>
 				<tr>
 					<td><a hred="#">Nested Table</a></td>
 					<td>Demo Continued</td>
 				</tr>
 			</table></td>
 			<td><table>
-				<tr><td>Nested Table 4</td></tr>
+				<tr><th>Nested Table 4</th></tr>
 				<tr><td class="last">HTML</td></tr>
 			</table></td>
 		</tr>
