--- a/main.html
+++ b/main.html
@@ -15,8 +15,8 @@
 					<th>Nested Table 2</th>
 				</tr>
 				<tr>
-					<td>Column 1</td>
-					<td>Column 2</td>
+					<th>Column 1</th>
+					<th>Column 2</th>
 				</tr>
 				<tr>
 					<td>abc</td>
@@ -26,9 +26,9 @@
 			<td><table>
 				<tr><th>Nested Table 1</th></tr>
 				<tr><td><ul>
-						<li>List item</li>
-						<li>List item</li>
-						<li>List item</li>
+						<li>List item 1</li>
+						<li>List item 2</li>
+						<li>List item 3</li>
 					</ul></td>
 				</tr>
 			</table></td>
