--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 			</table></td>
 			<td><table>
 				<tr><th>Nested Table 4</th></tr>
-				<tr><td class="last">HTML</td></tr>
+				<tr style="color:white"><th style="background-color:black">HTML</th></tr>
 			</table></td>
 		</tr>
     </table>
